--- a/simple-todos.html
+++ b/simple-todos.html
@@ -34,6 +34,6 @@
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
 
-    <span class="text"><strong>{{username}}</strong>{{text}}</span>
+    <span class="text">{{text}} <strong class="username">by {{username}}</strong></span>
   </li>
 </template>
